<resources>
    <string name="app_name">Farmaco Vigilanza</string>

    <!-- General purpose strings -->
    <string name="error_empty_field">Uno o più campi sono vuoti</string>
    <string name="error_generic">Ops! Riprova</string>
    <string name="error_wrong_credentials">L\'id o la password non sono corretti</string>
    <string name="waiting">Attendere prego</string>
    <string name="error_date">Le date devono essere nella forma dd/MM/yyyy</string>
    <string name="toast_to_exit">Press once again to exit!</string>
    <string name="button_ok">Ok</string>

    <!-- Login activity -->
    <string name="activity_login_title">Login</string>
    <string name="activity_login_edit_text_cf">Id</string>
    <string name="activity_login_edit_text_password">Password</string>
    <string name="activity_login_btn_login">Login</string>

    <!-- Main doctor activity -->
    <string name="activity_main_doctor_manage_patients">Gestisci pazienti</string>
    <string name="activity_main_doctor_manage_factors">Gestisci fattori di rischio</string>
    <string name="activity_main_doctor_manage_reports">Gestisci segnalazioni</string>
    <string name="activity_main_doctor_title">Pagina iniziale dottore</string>
    <string name="activity_main_doctor_menu_logout">Logout</string>
    <string name="activity_main_doctor_menu_reports_cronology">Cronologia segnalazioni</string>

    <!-- Add edit reports -->
    <string name="activity_add_reports_title">Nuova segnalazione</string>
    <string name="activity_add_reports_edit_text_cf">Codice fiscale</string>
    <string name="activity_add_reports_no_patient">Nessun paziente trovato. Vuoi aggiungerlo?</string>
    <string name="activity_add_reports_add_patient">Aggiungi paziente</string>
    <string name="activity_add_reports_edit_patient">Modifica paziente</string>
    <string name="activity_add_reports_add_adverse_reaction">+</string>

    <!-- Add edit patient activity -->
    <string name="activity_add_edit_patients_title">Aggiungi o modifica pazienti</string>
    <string name="activity_add_edit_patient_edit_text_cf">Codice fiscale</string>
    <string name="activity_add_edit_patient_edit_text_birthday">Anno di nascita</string>
    <string name="activity_add_edit_patient_edit_text_province">Provincia di residenza</string>
    <string name="activity_add_edit_patient_edit_text_job">Professione</string>
    <string name="activity_add_edit_patient_button_save">Salva</string>
    <string name="activity_add_edit_patient_button_add_therapies">Aggiungi Terapia Farmacologica</string>
    <string name="activity_add_edit_patient_button_add_risk_factor">Aggiungi Fattore di Rischio</string>
    <string name="activity_add_edit_patient_no_factor">Nessun fattore di rischio registrato</string>
    <string name="activity_add_edit_patient_no_therapies">Nessuna terapia registrata</string>
    <string name="activity_add_edit_patient_risk_factor_name">Nome fattore di rischio</string>
    <string name="activity_add_edit_patient_risk_factor_level">Livello di rischio</string>
    <string name="activity_add_edit_patient_button_save_risk_factor">Salva</string>
    <string name="activity_add_edit_patient_button_save_therapy">Salva</string>
    <string name="activity_add_edit_patient_therapy_medicine">Farmaco</string>
    <string name="activity_add_edit_patient_therapy_frequency">Frequenza (quante volte al giorno?)</string>
    <string name="activity_add_edit_patient_therapy_unit">Quantità al giorno</string>
    <string name="activity_add_edit_patient_therapy_start_date">Data inizio</string>
    <string name="activity_add_edit_patient_therapy_end_date">Data fine</string>
    <string name="activity_add_edit_patient_item_risk_factors_button_remove">Rimuovi</string>
    <string name="activity_add_edit_patient_item_therapies_button_remove">Rimuovi</string>
    <string name="activity_add_edit_patient_snackbar_cf_less">Il codice fiscale deve essere lungo 16 caratteri</string>
    <string name="activity_add_edit_patient_snackbar_birthdate_error">L\'anno di nascita deve essere composto solo da numeri!</string>
    <string name="activity_add_edit_patient_snackbar_risck_level_error">Il livello di rischio deve essere compreso tra 1 e 5!</string>
    <string name="activity_add_edit_patient_snackbar_unit_frequency_error">La frequenza e la quantità devono essere composti da soli numeri!</string>
    <string name="activity_add_reports_snackbar_therapy_error">Seleziona una terapia</string>

    <!-- Add reports -->
    <string name="activity_add_reports_text_view_patient_data">Dati paziente</string>
    <string name="activity_add_reports_text_view_factor">Fattori di rischio</string>
    <string name="activity_add_reports_text_view_therapy">Terapie</string>
    <string name="activity_add_reports_edit_text_adverse_reaction_date">Data reazione avversa</string>
    <string name="activity_add_reports_snackbar_gravity_level_error">Il livello di gravità deve essere compreso tra 1 e 5!</string>
    <string name="activity_add_reports_report_add_correctly">Report aggiunto correttamente!</string>

    <!-- Add adverse reaction activity -->
    <string name="activity_add_adverse_reaction_name_hint">Nome</string>
    <string name="activity_add_adverse_reaction_description_hint">Descrizione</string>
    <string name="activity_add_reports_adverse_reaction_level_of_risk">Livello di gravità</string>
    <string name="activity_add_adverse_reaction_title">Aggiungi reazione avversa</string>
    <string name="activity_add_adverse_reaction_save">Save</string>

    <!-- Pharmacologist activity -->
    <string name="activity_pharmacologist_title">Monitoraggio</string>
    <string name="activity_pharmacologist_tab_title_reports">Segnalazioni</string>
    <string name="activity_pharmacologist_tab_title_drugs">Farmaci</string>
    <string name="drugs_pharamacologist_fragment_sent">Segnalazione inviata</string>

    <!-- Reports chronology -->
    <string name="activity_reports_chronology">Cronologia segnalazioni</string>
    <string name="activity_reports_chronology_alert">Ci sono delle segnalazioni da analizzare!</string>

    <!-- Item drugs -->
    <string name="item_drugs_remove">Ritira</string>
    <string name="item_drugs_enable_check">Controlla</string>
    <string name="item_drugs_enable_monitor">Monitora</string>

    <!-- Menus -->
    <string name="menu_doctor_show_reports">Mostra segnalazioni</string>
    <string name="menu_pharmacologist_filter_by_gravity">Mostra segnalazioni gravi in settimana</string>
</resources>
